fix alignment of badge when not next to .icons-fat-check

--- a/client/assets/styles/scss/popover/popover-dns-mappings.scss
+++ b/client/assets/styles/scss/popover/popover-dns-mappings.scss
@@ -44,6 +44,11 @@
   // isolation badges
   .btn-badge {
     margin-left: 15px;
+    margin-right: 0; // override
+  }
+
+  .icons-fat-check {
+    margin-left: 9px;
   }
 
   // check icon
